--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,18 +15,7 @@
       "./tests/**/*"
     ],
     "references": [
-      { "path": "account-abstraction" },
-      { "path": "common" },
-      { "path": "core-types" },
-      { "path": "ethers-lib" },
-      { "path": "gas-estimator" },
-      { "path": "node-client" },
-      { "path": "relayer" },
-      { "path": "smart-account" },
-      { "path": "transactions" },
-      { "path": "web3-auth" },
-      { "path": "web3-auth-native" },
-      { "path": "transak" }
+      { "path": "web5-auth-core" },
     ]
   }
   
