--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "./tests/**/*"
     ],
     "references": [
-      { "path": "web5-auth-core" },
+      { "path": "./packages/web3auth-core" },
+      { "path": "./packages/transak" }
     ]
   }
   
