--- a/packages/web3auth-core/package.json
+++ b/packages/web3auth-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web5nexus/web3auth-core",
-  "version": "0.1.5",
+  "version": "0.1.23",
   "description": "Core Implementation for 1 click Web3 Social Auth Implementation for Ethereum, XDC, Bitcoin,Cosmos and other Altcoins.",
   "keywords": [
     "XDC",
@@ -42,6 +42,7 @@
     "@web3auth/no-modal": "^5.2.0",
     "@web3auth/openlogin-adapter": "^5.2.0",
     "@web3auth/wallet-connect-v2-adapter": "^5.2.0",
-    "ethers": "^5.7.1"
+    "ethers": "^5.7.1",
+    "web3": "^1.10.0"
   }
 }
