--- a/packages/social-login/package.json
+++ b/packages/social-login/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web5nexus/sociallogin",
-  "version": "1.1.11",
+  "version": "1.1.40",
   "description": "Social Login for Web5 Nexus sdk",
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
@@ -11,7 +11,7 @@
     "cross-chain",
     "web3auth"
   ],
-  "author": "Jetso Analion <jetso@web5.nexus>",
+  "author": "Jetso Analin <jetso@web5.nexus>",
   "homepage": "https://github.com/web5nexus/core-sdk#readme",
   "license": "MIT",
   "files": [
