--- a/packages/social-login/package.json
+++ b/packages/social-login/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web5nexus/sociallogin",
-  "version": "1.1.40",
+  "version": "1.1.47",
   "description": "Social Login for Web5 Nexus sdk",
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
@@ -48,6 +48,7 @@
     "@web3auth/no-modal": "^7.0.1",
     "@web3auth/openlogin-adapter": "^7.0.1",
     "@web3auth/wallet-connect-v2-adapter": "^7.0.2",
+    "@web5nexus/coretypes": "^1.1.6",
     "ethers": "^5.7.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
