--- a/packages/social-login/package.json
+++ b/packages/social-login/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web5nexus/sociallogin",
-  "version": "1.1.66",
+  "version": "1.1.72",
   "description": "Social Login for Web5 Nexus sdk",
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
@@ -42,7 +42,6 @@
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/sign-client": "^2.10.1",
     "@web3auth/base": "^7.0.1",
-    "@web3auth/core": "^4.6.0",
     "@web3auth/ethereum-provider": "^7.0.2",
     "@web3auth/metamask-adapter": "^7.0.1",
     "@web3auth/no-modal": "^7.0.1",
@@ -58,6 +57,7 @@
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "file-loader": "^6.2.0",
     "path": "^0.12.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
