--- a/example/web5auth-xdc/package.json
+++ b/example/web5auth-xdc/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "react-evm-no-modal-example",
+  "name": "demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@solana/web3.js": "^1.75.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@walletconnect/qrcode-modal": "^1.8.0",
-    "@walletconnect/sign-client": "^2.7.7",
-    "@web5nexus/web3auth-core": "^0.1.46",
-    "ethers": "5.7.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@web5nexus/coretypes": "^1.1.6",
+    "@web5nexus/sociallogin": "^1.1.73",
+    "ethers": "^5.6.9",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^3.1.0",
-    "web3": "^1.10.0"
+    "typescript": "^4.4.2"
+  },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,21 +45,15 @@
   },
   "devDependencies": {
     "assert": "^2.0.0",
-    "buffer": "^6.0.3",
+    "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "lint": "react-scripts lint"
   }
 }
